# cookiecutter-python-template

./: .editorconfig  .gitignore  .nens.toml  .pre-commit-config.yaml  .travis.yml  CHANGES.md  CHANGES.rst  DEVELOPMENT.md  Dockerfile  LICENSE  Pipfile  README.md  README.rst  cookiecutter.json  pyproject.toml  setup.cfg  setup.py  symlink_into_django_template.py  tox.ini
.github/: dependabot.yml
.github/workflows/: lint.yml  nens-meta.yml  test.yml
cookiecutter_python_template/: basic_test.py
django/: cookiecutter.json
django/{{ cookiecutter.project_name }}/: .editorconfig  .gitignore  .nens.toml  .pre-commit-config.yaml  CHANGES.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
django/{{ cookiecutter.project_name }}/.github/: dependabot.yml
django/{{ cookiecutter.project_name }}/.github/workflows/: nens-meta.yml  test.yml
django/{{ cookiecutter.project_name }}/src/: manage.py
django/{{ cookiecutter.project_name }}/src/{{ cookiecutter.package_name }}/: __init__.py  apps.py  settings.py  urls.py  wsgi.py
django/{{ cookiecutter.project_name }}/tests/: test_smoke.py
tests/: basic_test.py
{{ cookiecutter.project_name }}/: .coveragerc  .dockerignore  .nens.toml  .pre-commit-config.yaml  .travis.yml  CHANGES.md  CHANGES.rst  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  config.dev.yaml  config.test.yaml  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
{{ cookiecutter.project_name }}/.github/workflows/: lint.yml  nens-meta.yml  test.yml
{{ cookiecutter.project_name }}/integration_test/: conftest.py
{{ cookiecutter.project_name }}/scripts/: init-db.sql  wait-for-postgres.sh
{{ cookiecutter.project_name }}/tests/: test_smoke.py
{{ cookiecutter.project_name }}/{{cookiecutter.package_name}}/: __init__.py  main.py  script.py  scripts.py  settings.py
{{ cookiecutter.project_name }}/{{cookiecutter.package_name}}/tests/: test_init.py  test_script.py  test_scripts.py
