[build-system] # Whole section managed by nens-meta
requires = ["setuptools>=69"] # Suggested by nens-meta

[project]
name = "cookiecutter-python-template" # Set by nens-meta
authors = [
    {name = "Reinout van Rees", email = "reinout@vanrees.org"},
    {name = "Nelen & Schuurmans", email = "info@nelen-schuurmans.nl"},
]
description = "Cookiecutter template for a plain python project or library"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Topic :: Software Development",
    ]
dependencies = [
    "cookiecutter",  # Not a real code dependency, but we need it.
]
dynamic = ["version"] # Set by nens-meta
requires-python = ">=3.10" # Suggested by nens-meta

[project.optional-dependencies]
test = [
    "pytest",
    "pre-commit",
    "pyupgrade",
]

[project.urls]
homepage = "https://github.com/nens/cookiecutter-python-template"

[tool.setuptools] # Whole section managed by nens-meta
packages = ["cookiecutter_python_template"] # Set by nens-meta
zip-safe = false

[tool.setuptools.dynamic] # Whole section managed by nens-meta
version = {attr = "cookiecutter_python_template.__version__"}
[tool.pytest.ini_options] # Whole section managed by nens-meta
log_level = "DEBUG"
testpaths = ["cookiecutter_python_template"] # Set by nens-meta

[tool.zest-releaser]
# We don't need releasing as a package.
release = false

[tool.ruff] # Required: target-version
target-version = "py311"
extend-exclude = ["*cookiecutter.project_name*"]

[tool.ruff.lint] # Required: select
select = ["E4", "E7", "E9", "F", "I"]

[tool.pyright]
include = ["cookiecutter_python_template"] # Set by nens-meta
venvPath = "." # Set by nens-meta
venv = ".venv" # Set by nens-meta

[tool.coverage.run] # Whole section managed by nens-meta
source = ["cookiecutter_python_template"] # Set by nens-meta

[tool.coverage.report] # show_missing and skip_empty set by nens-meta
show_missing = true
skip_empty = true

[tool.dependencychecker]
ignore-packages = ["cookiecutter", "pre-commit", "pytest", "pyupgrade"]
