[build-system]
requires = ["setuptools>=69"]

[project]
name = "cookiecutter-python-template"
authors = [
    {name = "Reinout van Rees", email = "reinout@vanrees.org"},
    {name = "Nelen & Schuurmans", email = "info@nelen-schuurmans.nl"},
]
description = "Cookiecutter template for a plain python project or library"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Topic :: Software Development",
    ]
dependencies = [
    "cookiecutter",
]
dynamic = ["version"]
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest",
    "pre-commit",
    "pyupgrade",
]

[project.urls]
homepage = "https://github.com/nens/cookiecutter-python-template"

[tool.setuptools]
packages = ["cookiecutter_python_template"]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "cookiecutter_python_template.__version__"}
[tool.pytest.ini_options]
log_level = "DEBUG"
testpaths = ["cookiecutter_python_template"]

[tool.zest-releaser]
release = false

[tool.ruff]
target-version = "py311"
extend-exclude = ["*cookiecutter.project_name*"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pyright]
include = ["cookiecutter_python_template"]
venvPath = "."
venv = ".venv"

[tool.coverage.run]
source = ["cookiecutter_python_template"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.dependencychecker]
ignore-packages = ["cookiecutter", "pre-commit", "pytest", "pyupgrade"]
