[project]
name = "cookiecutter-python-template"
authors = [
    {name = "Reinout van Rees", email = "reinout@vanrees.org"},
    {name = "Nelen & Schuurmans", email = "info@nelen-schuurmans.nl"},
]
description = "Cookiecutter template for a plain python project or library"
readme = "README.md"
license = "MIT"
version = "0.6.dev0"
requires-python = ">=3.12"
classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Topic :: Software Development",
    ]
dependencies = [
    "cookiecutter"
]

[project.urls]
homepage = "https://github.com/nens/cookiecutter-python-template"

[tool.pytest.ini_options]
norecursedirs="{{ cookiecutter.project_name }}"
addopts = "tests/"

[tool.zest-releaser]
# We don't need releasing as a package.
release = false

[tool.ruff]
exclude = ["*cookiecutter.project_name*"]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "C901"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-sugar>=1.1.1",
]
