[project]
name = "{{cookiecutter.project_name}}"
description = "{{cookiecutter.project_short_description}}"
authors = [
    {name = "Nelen & Schuurmans", email = "info@nelen-schuurmans.nl"},
]
readme = "README.md"
license = {text = "MIT"}
# Get classifier strings from http://www.python.org/pypi?%3Aaction=list_classifiers
classifiers = ["Programming Language :: Python"]
keywords = []
requires-python = ">=3.10"
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[project.urls]
homepage = "https://github.com/nens/{{ cookiecutter.project_name }}"

[project.scripts]
run-{{ cookiecutter.project_name }} = "{{ cookiecutter.package_name }}.scripts:main"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["{{ cookiecutter.package_name }}*"]
# package names should match these glob patterns (["*"] by default)

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.package_name }}.__version__"}

[tool.pytest.ini_options]
norecursedirs="venv .venv data doc etc *.egg-info misc var build lib include"
python_files = "test_*.py"
testpaths = "{{ cookiecutter.package_name }}"

[tool.zestreleaser]
release = false
python-file-with-version = "{{ cookiecutter.package_name }}/__init__.py"

[tool.ruff]
# See https://docs.astral.sh/ruff/configuration/ for defaults.
target-version = "py310"

[tool.ruff.lint]
# Default select: ["E4", "E7", "E9", "F"]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.package_name }}"]

[tool.pyright]
# Pyright/pylance/vscode configuration.
# Note: if you want a different setup, you can overwrite this with a
# "pyrightconfig.json", which takes precedence.
include = "{{ cookiecutter.package_name }}"
venvPath = "."
venv = "venv"
