[build-system]
requires = ["setuptools>=69"]

[project]
name = "{{cookiecutter.project_name}}"
description = "{{cookiecutter.project_short_description}}"
authors = [
    {name = "Nelen & Schuurmans", email = "info@nelen-schuurmans.nl"},
]
readme = "README.md"
license = {text = "MIT"}
# Get classifier strings from http://www.python.org/pypi?%3Aaction=list_classifiers
classifiers = ["Programming Language :: Python"]
keywords = []
requires-python = ">=3.10"
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[project.urls]
homepage = "https://github.com/nens/{{ cookiecutter.project_name }}"

[tool.setuptools]
packages = ["{{ cookiecutter.package_name }}"]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "{{ cookiecutter.package_name }}.__version__"}

[tool.pytest.ini_options]
log_level = "DEBUG"
testpaths = ["cookiecutter_python_template"]

[tool.zest-releaser]
release = false
python-file-with-version = "{{ cookiecutter.package_name }}/__init__.py"

[tool.ruff]
# See https://docs.astral.sh/ruff/configuration/ for defaults.
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.package_name }}"]

[tool.pyright]
include = ["{{ cookiecutter.package_name }}"]
venvPath = "."
venv = ".venv"

[tool.coverage.run]
source = ["{{ cookiecutter.package_name }}"]

[tool.coverage.report]
show_missing = true
skip_empty = true
