# See https://nens-meta.readthedocs.io/en/latest/config-files.html
[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_name}}"
version = "0.1.dev0"
description = "{{cookiecutter.project_short_description}}"
authors = [
    {name = "Nelen & Schuurmans", email = "info@nelen-schuurmans.nl"},
]
readme = "README.md"
license = "MIT"
# Get classifier strings from http://www.python.org/pypi?%3Aaction=list_classifiers
classifiers = ["Programming Language :: Python"]
keywords = []
requires-python = ">=3.12"
dependencies = [
    "django-types>=0.22.0",
    "django==5.2.*",
    "djangorestframework-gis>=1.2.0",
    "djangorestframework-types>=0.9.0",
    "djangorestframework>=3.16.1",
    "nens-auth-client>=1.6.1",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.10.0",
]

[project.urls]
homepage = "https://github.com/nens/{{ cookiecutter.project_name }}"

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=80"

[[tool.uv.index]]
url = "https://packages.lizard.net/"

[tool.zest-releaser]
release = false

[tool.ruff]
# See https://docs.astral.sh/ruff/configuration/ for defaults.
target-version = "py312"

[tool.ruff.lint]
# Default select: ["E4", "E7", "E9", "F"]
select = ["E4", "E7", "E9", "F", "I", "UP", "C901"]

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.package_name }}"]

[tool.pyright]
# Pyright/pylance/vscode configuration.
# Note: if you want a different setup, you can overwrite this with a
# "pyrightconfig.json", which takes precedence.
include = "src"
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-cov>=6.3.0", "pytest-sugar>=1.1.1", "pytest-django>=4.11"]
